advent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: advent-deployment
    labels:
        app: advent-app
spec:
  replicas: 1
  selector:
    matchLabels:
        app: advent-app
  template:
        metadata:
            labels:
                app: advent-app
        spec:
            containers:
                - name: advent-container
                  image: registry.services.atlantishq.de/beekama/advent:latest
                  imagePullPolicy: Always   # missing
                  ports:
                    - containerPort: 80
