advent/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: advent-service
    label:
        app: advent-app
spec:
    selector:
        app: advent-app
    ports:
        - name: http
          port: 80
          targetPort: 80
    type: ClusterIP
